--- a/style.css
+++ b/style.css
@@ -201,7 +201,7 @@ img {
 .home__title {
   font-size: var(--big-font-size);
   margin-bottom: var(--mb-5);
-  max-width: 7rem;
+  max-width: auto;
 }
 
 .home__title-color {
